サーバーサイドのバグ修正
